// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadRowMobileView should not render access selector or date picker if access condition is not required to select 1`] = `
<WithStyles(List)
  classes={
    Object {
      "root": "root",
    }
  }
>
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ListItemIcon)>
      <pure(AttachmentIcon) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      primary="test.pdf (100 MB)"
      primaryTypographyProps={
        Object {
          "noWrap": true,
          "variant": "body1",
        }
      }
      secondary="File name"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
  </WithStyles(ListItem)>
</WithStyles(List)>
`;

exports[`Component FileUploadRowMobileView should not render embargo date picker if access condition is set to closed access 1`] = `
<WithStyles(List)
  classes={
    Object {
      "root": "root",
    }
  }
>
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ListItemIcon)>
      <pure(AttachmentIcon) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      primary="test.pdf (100 MB)"
      primaryTypographyProps={
        Object {
          "noWrap": true,
          "variant": "body1",
        }
      }
      secondary="File name"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
  </WithStyles(ListItem)>
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ListItemIcon)>
      <pure(LockOutlinedIcon) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      secondary="File access"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        onChange={[MockFunction]}
        value={8}
      />
    </WithStyles(ListItemText)>
  </WithStyles(ListItem)>
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ListItemIcon)>
      <pure(CalendarTodayOutlinedIcon) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      primaryTypographyProps={
        Object {
          "variant": "body1",
        }
      }
      secondary="Embargo date"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(Typography)
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </WithStyles(Typography)>
    </WithStyles(ListItemText)>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": undefined,
        }
      }
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</WithStyles(List)>
`;

exports[`Component FileUploadRowMobileView should render default view 1`] = `
<WithStyles(List)
  classes={
    Object {
      "root": "root",
    }
  }
>
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ListItemIcon)>
      <pure(AttachmentIcon) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      primary="test.pdf (100 MB)"
      primaryTypographyProps={
        Object {
          "noWrap": true,
          "variant": "body1",
        }
      }
      secondary="File name"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
  </WithStyles(ListItem)>
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ListItemIcon)>
      <pure(LockOutlinedIcon) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      secondary="File access"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        onChange={[MockFunction]}
        value={null}
      />
    </WithStyles(ListItemText)>
  </WithStyles(ListItem)>
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ListItemIcon)>
      <pure(CalendarTodayOutlinedIcon) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      primaryTypographyProps={
        Object {
          "variant": "body1",
        }
      }
      secondary="Embargo date"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(Typography)
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </WithStyles(Typography)>
    </WithStyles(ListItemText)>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": undefined,
        }
      }
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</WithStyles(List)>
`;

exports[`Component FileUploadRowMobileView should render embargo date picker if access condition is set to open access 1`] = `
<WithStyles(List)
  classes={
    Object {
      "root": "root",
    }
  }
>
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ListItemIcon)>
      <pure(AttachmentIcon) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      primary="test.pdf (100 MB)"
      primaryTypographyProps={
        Object {
          "noWrap": true,
          "variant": "body1",
        }
      }
      secondary="File name"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
  </WithStyles(ListItem)>
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ListItemIcon)>
      <pure(LockOutlinedIcon) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      secondary="File access"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        onChange={[MockFunction]}
        value={9}
      />
    </WithStyles(ListItemText)>
  </WithStyles(ListItem)>
  <WithStyles(ListItem)
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ListItemIcon)>
      <pure(CalendarTodayOutlinedIcon) />
    </WithStyles(ListItemIcon)>
    <WithStyles(ListItemText)
      primaryTypographyProps={
        Object {
          "variant": "body1",
        }
      }
      secondary="Embargo date"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(FileUploadEmbargoDate)
        disabled={false}
        onChange={[MockFunction]}
        value={2016-12-31T14:00:00.000Z}
      />
    </WithStyles(ListItemText)>
    <WithStyles(ListItemSecondaryAction)
      classes={
        Object {
          "root": undefined,
        }
      }
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</WithStyles(List)>
`;
